# clubsdirectory

./: contributing.md  package-lock.json  readme.md
backend/: .gitignore  Dockerfile  Dockerfile.slack  Procfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt  runtime.txt
backend/bot/: main.py
backend/helpers/: air_table.py  classes.py  geo.py  slack_minor.py
backend/scripts/: dict_to_json.py  json_to_dict.py  old_clubs_update.py  profile_update.py  profiler.py
site/: README.md  next.config.js  package-lock.json  package.json  prettier.config.js  tsconfig.json
site/.next/: trace
site/.next/server/: _error.js
site/.next/server/pages/: _app.js  (+3 more)
site/app/: layout.js  page.js
site/app/map/: page.js
site/components/: ClubPreview.js  ClubPreviewOld.js  ClubsTable.js  DirectoryHeading.js  DirectoryVideoSection.js  EmbedMapButton.js  Map.js  MapFrame.js  SearchControls.js  ShareButton.js  TableLabel.js  detailViewModal.js  footer.js  force-theme.js  header.js  heading.js  map.js  nav.js
site/components/Map/: Assemble.js  ClubMarker.js  Epoch.js  HQ.js  Map.js  OldClubMarker.js  Outernet.js  Steve.js  UserLocationDot.js  Zephyr.js  ZephyrPath.js  ZephyrStart.js  ZephyrStop.js  index.js
site/components/map-components/: Assemble.js  ClubMarker.js  Epoch.js  HQ.js  OldClubMarker.js  Zephyr.js  index.js
site/components/old/: ClubPreviewOld.js  color-switcher.js  force-theme.js
site/components/pages/: map-page.js
site/lib/: data.js  functions.js  theme.js
site/pages/: MapPage.js  _app.js  _document.js  detailViewModal.js  index.js  map.js
(+832 files in other folders)
